--- a/pahina.html
+++ b/pahina.html
@@ -350,7 +350,7 @@
 
 @keyframes move{
         0%   {left:0px; top:0px;}
-        25%  {left:50px; top:0px;}
+        25%  {left:100px; top:0px;}
         50%  {left:70px; top:50px;}
         75%  {left:0px; top:50px;}
         100% {left:0px; top:0px;}
@@ -547,9 +547,9 @@
 <section>
     <div class="container">
         <div>
-            <p>Follow me on Facebook for more free web designs and </p>
+            <p style="text-align: center; padding-top: 30px;">Follow me on Facebook for more free web designs</p>
             <div class="move" style="text-align: center; margin: 0 auto;"><a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><br><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a></div>
-            <p>tutorial videos on how to create and design websites</p>
+            <p style="text-align: center; padding-top: 30px;">Or visit my <a href="https://grace-gardner.github.io/cartoon-hero/test.html" title="Blog">Blog</a> for more tutorial videos on how to create and design websites</p>
             
 
             
