--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -160,7 +160,7 @@
 
 				<div class="col-sm">
 					<figure>
-						<img src="https://images.freeimages.com/images/large-previews/25a/pink-heart-of-stone-1316358.jpg" alt="Pink pink-heart-of-stone-1316358"/>
+						<img src="boracay.jpg" alt="sample image 1"/>
 					</figure>
 				</div>
 				
@@ -175,7 +175,7 @@
 			<div class="row">
 				<div class="col-sm">
 					<figure>
-						<img src="https://images.freeimages.com/images/large-previews/5b8/starfish-1377326.jpg" alt="starfish-1377326"/>
+						<img src="cyprus.jpg" alt="sample image 2"/>
 					</figure>
 				</div>
 				<div class="col-sm">
@@ -201,7 +201,7 @@
 				</div>
 				<div class="col-sm">
 					<figure>
-						<img src="https://images.freeimages.com/images/large-previews/fec/sunset-rays-1391805.jpg" alt="sunset-rays-1391805"/>
+						<img src="turkey.jpg" alt="sample image 3"/>
 					</figure>
 				</div>
 				
