--- a/freetemplate1.html
+++ b/freetemplate1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Free Template1 - Shop</title>
+<title>Free Template1</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <script src="https://kit.fontawesome.com/fd14e678e6.js" crossorigin="anonymous"></script>
