--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -159,9 +159,7 @@
 				</div>
 
 				<div class="col-sm">
-					<figure>
-						<img src="boracay.jpg" alt="sample image 1"/>
-					</figure>
+					<img src="https://grace-gardner.github.io/cadyow/Boracay.jpg" alt="sample image 1"/>
 				</div>
 				
 			</div>
