--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -173,7 +173,7 @@
 			<div class="row">
 				<div class="col-sm">
 					<figure>
-						<img src="cyprus.jpg" alt="sample image 2"/>
+						<img src="https://grace-gardner.github.io/cadyow/Turkey.jpg" alt="sample image 2"/>
 					</figure>
 				</div>
 				<div class="col-sm">
