--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -199,7 +199,7 @@
 				</div>
 				<div class="col-sm">
 					<figure>
-						<img src="turkey.jpg" alt="sample image 3"/>
+						<img src="https://grace-gardner.github.io/cadyow/turkey2.jpg" alt="sample image 3"/>
 					</figure>
 				</div>
 				
@@ -209,7 +209,7 @@
 
 
 	<footer>
-		<h2>Get in touch</h2>
+		<h2 style="background-color: #a1edb5;">Get in touch</h2>
 		<ul class="social-menu" style="padding: 0; list-style-type: none; margin: 7px 0;">
                 <li style="float: none; margin: 0 2px; display: inline-block;">
                     <a href="#default" target="" title="Facebook"><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a>
