--- a/freetemplate3.html
+++ b/freetemplate3.html
@@ -58,7 +58,7 @@ figcaption{
 	font-size: 8px;
 }
 
-h1{
+h1, h2{
 	text-align: center;
 	margin: 0 auto;
 	padding-top: 22px;
@@ -129,9 +129,9 @@ p{
 		50% {background-color: #f7cbf5;}
 		75% {background-color: ;}
 		100% {background-color: #fae3f7;}
+	}
 
-    }
-
+ 
  
 
     
@@ -150,9 +150,18 @@ p{
 
 
 	<div class="sample">
-		<div class="bg"><h1>Create & Design<br> your own Website</h1></div>
+		<div class="bg"><h1>FlowerPower&copy;<br></h1>
+			<p>Your <i>friendly</i> florist shop</p>
+		</div>
 		
-		<figcaption>Image by <a href="https://pixabay.com/users/yuri_b-2216431/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1259019">Yuri_B</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1259019">Pixabay</a></figcaption>
+		<figcaption>Image by <a href="https://pixabay.com/users/yuri_b-2216431/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1259019">Yuri_B</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1259019">Pixabay</a>
+		</figcaption>
+
+		<a class="button" href="">Follow me on Facebook</a>
+
+		 
+
+		
 	</div>
 
 	<div class="move">
