--- a/pahina.html
+++ b/pahina.html
@@ -360,7 +360,7 @@
 .move{
     width: 50px;
     height: 50px;
-    background-color: blue;
+    background-color: #5c2d2d;
     position: relative;
     animation-name: move;
     animation-duration: 10s;
@@ -498,7 +498,7 @@ figcaption{
         <div>
             <p style="text-align: center; padding-top: 30px;">All you need is some basic understanding of HTML and CSS. There are hundreds of video tutorials, blogs and even free online courses that you can utilise to learn HTML and CSS. Once you understand how a web page is <i>structured</i> by HTML and <i>styled</i> by CSS, the rest is up to your imagination. Hence, the creation of this site. I wanted to create an open-source website for anyone who simply want a basic web page for their small/startup business but can't afford to pay web designers or website builders. Here you'll be able to do it yourself for <strong>free</strong>. I have created a variety of different web designs that are copyright-free so you can copy and recreate them for your own website.</p><br>
     
-            <p style="color: darkgoldenrod; text-align: center; padding-top: 30px;">How is this different from website builders and other free web design websites?</p>
+            <p style="color: darkgoldenrod; text-align: center; padding-top: 30px;"><b>How is this different from website builders and other free web design websites?</b></p>
 
             <p style="text-align: center; padding-top: 30px;">A lot of, if not all website builders will require you to sign up and create an account with them before you can start using their services. Other websites offering free design templates will require you to download 2 separate files (one for HTML and  the other for the CSS). The formation and design of a website go hand-in-hand with both files being linked together. If one file is corrupted or needs debugging, it will ultimately affect the design. The templates I have created have both the HTML and CSS hand-coded within it. No downloads, no sign ups, just copy and paste! Simply click on the image to go to the sample website and if you like the look and design, right click anywhere on the page and and click on "View Page Source". You can then "select all and copy" (CTRL+A, CTRL+C) the codes and save it in a folder on your computer.</p>
             
