--- a/pahina.html
+++ b/pahina.html
@@ -24,6 +24,7 @@
         background-size: cover;
 
 
+
        
     }
     p{
@@ -408,7 +409,7 @@ figcaption{
     <div class="header-container">
         <div class="header" style="overflow: hidden; background-color: none; padding: 20px 10px;"><a href="https://pixabay.com/users/alexey_hulsov-388655/" target="_blank" style="float: left; width: 65px; display: inline-block;"/><img src="monogramlogo.jpg">
 
-            <a href="#default" style="float: left; color: #5c2d2d; text-align: center; padding-top: 25px; padding-left: 25px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">MG Designs</a>
+            <a href="#default" style="float: left; color: #5c2d2d; text-align: center; padding-top: 25px; padding-left: 25px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">MaryG Designs</a>
         </div>
         
     </div>
