--- a/pahina.html
+++ b/pahina.html
@@ -440,7 +440,7 @@ figcaption{
             font-size: 10px;
         }
         #sign-up{
-            background-image: url(desk.jpg);
+            background-image: url();
             background-repeat: no-repeat;
             background-size: cover;
             margin: 0 auto;
@@ -495,6 +495,8 @@ figcaption{
 
 
 <section id="sign-up" class="container">
+            <video class="column" style="height: 100%; width: 100%; padding: 0px;" controls>Your browser does not support the &lt;video&gt; tag.
+                            <source src="pahina.mp4"/></video>
             <h2 style="padding-top: 20px; padding-left: 15px;">Free web designs<br> at your fingertips</h2>
             <h3>Subscribe Now!</h3>
             <form>
@@ -563,7 +565,7 @@ figcaption{
 
         <div class="container">
             <div>
-                <div class="move" style="text-align: center; margin: 0 auto;"><a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><br><i class="fab fa-facebook-square" style="color: dimgrey; height: 120px;"></i></a></div>
+                <div class="move" style="text-align: center; margin: 0 auto;"><a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><br><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a></div>
             </div>
         </div>
         <div>
