--- a/pahina.html
+++ b/pahina.html
@@ -497,7 +497,7 @@ figcaption{
 <section id="sign-up" class="container" style="background-color: black;">
             <h2>Free web designs!</h2>
             <video width="100%" height="100%" autoplay loop>
-                <source src="pahina.mp4" type="video/mp4" style="height: 100%; width: 100%;" />
+                <source src="pahina.mp4" type="video/mp4" style="height: 100%; width: 100%;"/>
                 
                 Your browser does not support the video tag.
             </video>
@@ -556,7 +556,7 @@ figcaption{
             <div style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); width: 100%;margin: auto;text-align: center;font-family: arial; padding: 15px;">
                                 <a href="https://grace-gardner.github.io/pahina/freetemplate1.html" target="_blank">
                                     <figcaption style="color: black;">Retail Shop</figcaption>
-                                    <img src="template1.jpg" alt="product-image" style="width:100%"/>
+                                    <img src="freetemplate1.jpg" alt="product-image" style="width:100%"/>
                                 </a>
             </div>
         </div>
