--- a/pahina.html
+++ b/pahina.html
@@ -556,7 +556,7 @@ figcaption{
             <div style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); width: 100%;margin: auto;text-align: center;font-family: arial; padding: 15px;">
                 <a href="https://grace-gardner.github.io/pahina/freetemplate1.html" target="_blank">
                     <figcaption style="color: black;">Retail Shop</figcaption>
-                    <img src="template1.jpg" alt="product-image" style="width:100%"/>
+                    <img src="freetemplate1.jpg" alt="product-image" style="width:100%"/>
                 </a>
             </div>
         </div>
