--- a/freetemplate3.html
+++ b/freetemplate3.html
@@ -472,11 +472,12 @@ figcaption{
             font-size: 10px;
         }
         #sign-up{
-            background-image: url();
+            background-image: url(fullcake.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             margin: 0 auto;
-            height: 500px;
+            height: 100vh;
+            width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -539,15 +540,15 @@ figcaption{
 
 
 
-<section id="sign-up">
-			<h2 style="padding-top: 20px; padding-left: 15px;">Free web designs<br> at your fingertips</h2>
-			<h3>Subscribe Now!</h3>
-			<form>
-				<input type="email" aria-label="email" placeholder=" Enter your email">
-				<input type="Submit" name="">
-			</form>
-
-
+<section>
+	<div id="sign-up" class="container">
+		<h2 style="padding-top: 20px; padding-left: 15px; color: #9607ba;">Personalised<br> luxury cakes<br> at your fingertips</h2>
+		<h3 style="color: #9607ba;">Order Now!</h3>
+		<form>
+			<input type="email" aria-label="email" placeholder=" Enter your email">
+			<input type="Submit" name="">
+		</form>
+	</div>
 </section>
 
 
