--- a/freetemplate3.html
+++ b/freetemplate3.html
@@ -535,6 +535,9 @@ figcaption{
 		<a href="" target="_blank" style="display: block; text-align: center;">Personalised Cakes</a>
 		<a href="" target="_blank" style="display: block; text-align: center;">Cupcakes</a>
 		<a href="" target="_blank"style="display: block; text-align: center;">Gift Ideas</a>
+		<a href="#why">
+             <span class="default">Why</span>
+             <span class="over">Why</span></a>
 	</div>
 </section>
 
