--- a/freetemplate3.html
+++ b/freetemplate3.html
@@ -472,7 +472,7 @@ figcaption{
             font-size: 10px;
         }
         #sign-up{
-            background-image: url(fullcake.jpg);
+            background-image: url(fullcake2.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             margin: 0 auto;
@@ -532,12 +532,11 @@ figcaption{
 
 <section>
 	<div class="container">
-		<a href="" target="_blank" style="display: block; text-align: center;">Personalised Cakes</a>
+		<a href="" target="_blank" style="display: block; text-align: center;">Birthday Cakes</a>
 		<a href="" target="_blank" style="display: block; text-align: center;">Cupcakes</a>
 		<a href="" target="_blank"style="display: block; text-align: center;">Gift Ideas</a>
-		<a href="#why">
-             <span class="default">Why</span>
-             <span class="over">Why</span></a>
+		<a href="" target="_blank"style="display: block; text-align: center;">View All Collections</a>
+		
 	</div>
 </section>
 
@@ -545,8 +544,11 @@ figcaption{
 
 <section>
 	<div id="sign-up" class="container">
-		<h2 style="padding-top: 20px; padding-left: 15px; color: #9607ba;">Personalised<br> luxury cakes<br> at your fingertips</h2>
-		<h3 style="color: #9607ba;">Order Now!</h3>
+		<p style="color: #9607ba; font-size: 15px;">Personalised~Luxurious~Unique<br></p>
+		
+		
+
+		<p style="color: #9607ba; font-size: 15px;">Order Now!</p><br>
 		<form>
 			<input type="email" aria-label="email" placeholder=" Enter your email">
 			<input type="Submit" name="">
