--- a/practicepad.html
+++ b/practicepad.html
@@ -17,7 +17,7 @@
     }
 
     body{
-        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg);
+        background-image: url(worker.JPG);
         background-repeat: no-repeat;
         background-size: cover;
         
