--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -115,18 +115,18 @@
 	</nav>
 
 
-	<header>
+	<header style="background-image: url(headerbackground4.JPG); background-size: cover; background-repeat: no-repeat;">
 		<div class="container">
 			<div class="row">
 
 				<div class="col-sm">
-					<h1>Hi, I'm Jane Doe<br> I'm a professional (add your profession)</h1>
+					<h1>Hi, I'm Grace<br> I'm a professional<br> Event Planner</h1>
 					<p>I specialise in:</p>
 					<ul>
-						<li>add your sepcialities</li>
-						<li>add your sepcialities</li>
-						<li>add your sepcialities</li>
-						<li>add your sepcialities</li>
+						<li>Weddings</li>
+						<li>Birthdays</li>
+						<li>and much more!</li>
+						
 					</ul>
 					<a class="button" href="">Follow me on Facebook</a>
 					
