--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -165,13 +165,13 @@
 			<div class="row">
 				<div class="col-sm">
 					<h2>Portfolio 1</h2>
-					<p>Enter details here. Sample text. Lorem Ipsum</p><br>
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce lacinia purus vitae molestie pharetra. Morbi dignissim ipsum sed commodo vulputate. Ut elementum diam ante, nec lacinia metus ullamcorper et. Ut ut congue dui. Fusce placerat, ipsum sed commodo euismod, nisi ante cursus dolor, ut pulvinar tortor ex at dolor. Integer dictum ipsum nibh. Nam nec enim nibh. Vestibulum sapien purus, tincidunt bibendum nulla a, fermentum mattis leo. Vivamus vel elit quis purus euismod maximus sed quis metus. Mauris volutpat, tortor eu venenatis commodo, diam risus fringilla neque, vel vulputate felis turpis non turpis. Fusce rhoncus risus lacus, in hendrerit velit mollis a."</p>
+					<p>Wedding Package</p><br>
+					<p></p>
 					<a class="button" href="View">View</a>
 				</div>
 
 				<div class="col-sm">
-					<img src="https://grace-gardner.github.io/cadyow/Boracay.jpg" alt="sample image 1"/>
+					<img src="34-35.jpg" alt="sample image 1"/>
 				</div>
 				
 			</div>
