--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -135,7 +135,7 @@
 		<div class="container">
 			<div>
 				<h1>Hi, I'm Grace<br> I'm a professional<br> Event Planner</h1>
-				<p>I specialise in:</p>
+				<p style="color: silver;">I specialise in:</p>
 				<ul>
 					<li>Weddings</li>
 					<li>&</li>
@@ -167,7 +167,7 @@
 					<h2>Portfolio 1</h2>
 					<p>Wedding Package</p><br>
 					<p></p>
-					<a class="button" href="View">View</a>
+					<!--<a class="button" href="View">View</a>-->
 				</div>
 
 				<div class="col-sm">
