--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -185,7 +185,7 @@
 			<div class="row">
 				<div class="col-sm">
 					<figure>
-						<img src="IMG_4776.jpg" alt="sample image 2"/>
+						<img src="IMG_4776.JPG" alt="sample image 2"/>
 					</figure>
 				</div>
 				<div class="col-sm">
