--- a/freetemplate2.html
+++ b/freetemplate2.html
@@ -211,7 +211,7 @@
 				</div>
 				<div class="col-sm">
 					<figure>
-						<img src="IMG_4706.jpg" alt="sample image 3"/>
+						<img src="IMG_4706.JPG" alt="sample image 3"/>
 					</figure>
 				</div>
 				
@@ -224,7 +224,7 @@
 			<div class="row">
 				<div class="col-sm">
 					<figure>
-						<img src="IMG_1669.jpg" alt="sample image 2"/>
+						<img src="IMG_1669.JPG" alt="sample image 2"/>
 					</figure>
 				</div>
 				<div class="col-sm">
