--- a/freetemplate3.html
+++ b/freetemplate3.html
@@ -143,7 +143,7 @@
             color: darkgoldenrod;}
 
         .social-menu{
-            float: left;
+            float: ;
             display: block;}
 
         .column{
@@ -176,7 +176,7 @@
             color: darkgoldenrod;}
 
         .social-menu{
-            float: left;
+            float: ;
             display: block;}
 
         
@@ -762,6 +762,7 @@ figcaption{
                 </li>
             </ul>
             </h2>
+            <p style="text-align: center;">mgracecakes@email.com</p>
 	</div>
 </section>
 
